[package]
name = "wrld"
version = "1.0.0"
edition = "2021"
authors = ["Corentin <corentindeblock@gmail.com>"]
license = "MIT"
keywords = ["wgpu", "macro", "derive-macro", "wgpu-helper"]
categories = ["accessibility"]
description = "A wgpu derive macro to help with buffer description"
readme = "README.md"
repository = "https://github.com/CorentinDeblock/wrld"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dev_dependencies]
trybuild = {version = "1.0", features = ["diff"]}

[dependencies]
const_format = "0.2.26"
syn = {version = "1.0.99", features = ["extra-traits"]}
quote = "1.0.21"
proc-macro2 = "1.0.43"
wgpu = "0.13.1"
bytemuck = { version = "1.4", features = [ "derive" ] }
regex = "1.6.0"
phf = {version = "0.11", features = ["macros"]}